--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -82,15 +82,15 @@
     </filter-mapping>
 
 
-    <!--<filter>-->
-        <!--<filter-name>PermissionFilter</filter-name>-->
-        <!--<filter-class>com.czdpzc.filter.PermissionFilter</filter-class>-->
-    <!--</filter>-->
+    <filter>
+        <filter-name>PermissionFilter</filter-name>
+        <filter-class>com.czdpzc.filter.PermissionFilter</filter-class>
+    </filter>
 
-    <!--<filter-mapping>-->
-        <!--<filter-name>PermissionFilter</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
+    <filter-mapping>
+        <filter-name>PermissionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     
 
   
