完成借书的servlet，和界面的修改

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -56,6 +56,15 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>BackServlet</servlet-name>
+        <servlet-class>com.czdpzc.servlet.BackServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>BackServlet</servlet-name>
+        <url-pattern>/BackServlet</url-pattern>
+    </servlet-mapping>
 
 
     <!--编码方式的过滤器，设置为UTF-8-->
