页面的调整； 目前任务：图书入库和出库

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -66,6 +66,17 @@
         <url-pattern>/BackServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>GetUserInfoServlet</servlet-name>
+        <servlet-class>com.czdpzc.servlet.GetUserInfoServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>GetUserInfoServlet</servlet-name>
+        <url-pattern>/GetUserInfoServlet</url-pattern>
+    </servlet-mapping>
+
+
 
     <!--编码方式的过滤器，设置为UTF-8-->
 
