--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -96,6 +96,27 @@
         <url-pattern>/DeleteBookServlet</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>AddUserServlet</servlet-name>
+        <servlet-class>com.czdpzc.servlet.AddUserServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>AddUserServlet</servlet-name>
+        <url-pattern>/AddUserServlet</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>DeleteUserServlet</servlet-name>
+        <servlet-class>com.czdpzc.servlet.DeleteUserServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>DeleteUserServlet</servlet-name>
+        <url-pattern>/DeleteUserServlet</url-pattern>
+    </servlet-mapping>
+
 
 
     <!--编码方式的过滤器，设置为UTF-8-->
